--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
     font-family: "Roboto", sans-serif;
 }
 body {
-    background-color: #656db8;
+    background: linear-gradient(56deg, rgba(11,4,246,1) 10%, rgba(8,242,58,0.8519782913165266) 50%, rgba(245,148,11,1) 88%);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -19,54 +19,56 @@ h2 {
     font-style: normal;
     font-weight: 400px;
     font-size: 39px;
-    line-height: 38px;
-    color: rgb(246, 250, 246);
+    line-height: 50px;
+    color: rgb(249, 29, 4);
     text-align: center;
+    border-radius: 20px;
     margin-top: 100px;
     margin-bottom: 26px;
-    box-shadow: 10px 5px 5px rgb(47, 8, 8);
+    direction: none;
+    box-shadow: 10px 5px 5px rgb(248, 66, 66);
     
 }
 
 .input-min {
    width: 200px;
-   height: 40px;
-   font-size: 25px;
+   height: 50px;
+   font-size: 35px;
    line-height: 46.88px;
-   color: rgb(246, 250, 246);
-   background-color: rgb(73, 77, 75);
-   border-radius: 1ch;
+   color: rgb(17, 16, 16);
+   background-color: rgb(235, 240, 238);
+   border-radius: 12px;
    margin: 5px;
    border: none;
    cursor: pointer;
-   border: 1px solid rgba(254, 5, 9, 0.2)
+   border: 2px solid rgba(237, 5, 5, 0.2)
   
 }
 
 .input-max {
     width: 200px;
-   height: 40px;
-   font-size: 25px;
+   height: 50px;
+   font-size: 35px;
    line-height: 46.88px;
-   color: rgb(246, 250, 246);
-   background-color: rgb(73, 77, 75);
-   border-radius: 1ch;
+   color: rgb(0, 16, 0);
+   background-color: rgb(250, 244, 244);
+   border-radius: 12px;
    margin: 5px;
    border: none;
    cursor: pointer;
-   border: 1px solid rgba(254, 5, 9, 0.2)
+   border: 2px solid rgba(246, 4, 4, 0.2)
     
    
 }
 
 
 button {
-    background: #aec346;
-    box-shadow: 0px 18px 40px rgba(239, 243, 216, 0.38);
+    background: #ffffff;
+    box-shadow: 0px 18px 40px rgba(253, 1, 1, 0.38);
     border-radius: 12px;
     width: 342px;
     height: 72px;
-    color: #24131b;
+    color: rgb(248, 66, 66);
     font-weight: 700;
     font-size: 50px;
     margin-top: 80px;
